interacción mapa <-> lista profes y pointers mapa <-> teacher card

--- a/src/app/modules/home/components/home/home-components/map-section/map-section.component.css
+++ b/src/app/modules/home/components/home/home-components/map-section/map-section.component.css
@@ -2,8 +2,12 @@
     min-height: 30rem;
   }
 
-  #teachers-nearby .scrollable-container {
-    /* Set a maximum height for the scrollable area */
-    max-height: 27.4rem; 
-    overflow-y: scroll;
-  }
+#teachers-nearby .scrollable-container {
+  /* Set a maximum height for the scrollable area */
+  max-height: 27.4rem; 
+  overflow-y: scroll;
+}
+
+map-info-window {
+  color: black;
+}
