--- a/src/app/modules/teacher/components/teacher-contact/teacher-contact.component.html
+++ b/src/app/modules/teacher/components/teacher-contact/teacher-contact.component.html
@@ -1,12 +1,20 @@
-<section>
+<section *ngIf="displaySection" >
     <h1 class="m-4 text-center modal-title">Escribe un mensaje a {{teacher.name}}</h1>
-    <form>
+    <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
         <div class="form-floating m-4">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" style="height: 40vh"></textarea>
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" formControlName="textarea"></textarea>
             <label for="floatingTextarea">{{teacher.name}} recibirá este mensaje:</label>
         </div>
         <div class="d-flex justify-content-center">
-            <input type="submit" class="btn btn-info " value="Contactar con: {{teacher.name}}">
+            <input type="submit" class="btn btn-info" value="Contactar con: {{teacher.name}}">
         </div>
     </form>
+</section>
+<section *ngIf="!displaySection">
+    <div class="row align-content-center m-4" style="height: 40vh; background-color: white;">
+        <p class="text-center">Se ha enviado tu mensaje a Manuel Sánchez con éxito. Si recibe una respuesta, se te notificará a través del chat.</p>
+    </div>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-info" (click)="returnHome()">Volver a Inicio</button>
+    </div>
 </section>
