--- a/src/app/modules/teacher/components/teacher-contact/teacher-contact.component.html
+++ b/src/app/modules/teacher/components/teacher-contact/teacher-contact.component.html
@@ -11,8 +11,8 @@
     </form>
 </section>
 <section *ngIf="!displaySection">
-    <div class="row align-content-center m-4" style="height: 40vh; background-color: white;">
-        <p class="text-center">Se ha enviado tu mensaje a Manuel Sánchez con éxito. Si recibe una respuesta, se te notificará a través del chat.</p>
+    <div class="row align-content-center m-4" id="backgr">
+        <p class="text-center">Se ha enviado tu mensaje a {{teacher.name}} con éxito. Si recibe una respuesta, se te notificará a través del chat.</p>
     </div>
     <div class="d-flex justify-content-center">
         <button class="btn btn-info" (click)="returnHome()">Volver a Inicio</button>
