--- a/src/app/modules/teacher/components/teacher-rate/teacher-rate.component.html
+++ b/src/app/modules/teacher/components/teacher-rate/teacher-rate.component.html
@@ -1,1 +1,36 @@
-<p>teacher-rate works!</p>
+<section *ngIf="displaySection">
+    <div id="backgr" class="row align-content-center m-4">
+
+        <form class="px-4" [formGroup]="formulario" (ngSubmit)="onSubmit()">
+            <div>
+                <label class="form-label me-3">Puntuación:</label>
+                <div class="d-inline">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-star-fill grey" viewBox="0 0 16 16" *ngFor="let star of stars" [ngClass]="[star.class]"(click)="selectStar(star.id)">
+                        <path
+                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                    </svg>
+                </div>
+            </div>
+            <br>
+            <textarea class="form-control" id="floatingTextarea" placeholder="Comentario (opcional)" formControlName="textarea"></textarea>
+            <div class="d-flex justify-content-center mt-4">
+                <input type="submit" class="btn btn-info" value="Puntuar">
+            </div>
+        </form>
+
+    </div>
+</section>
+
+<section *ngIf="!displaySection">
+    <div id="backgr" class="row align-content-center m-4">
+
+        <p class="text-center">Ya ha puntuado al usuario {{teacher.name}}</p>
+        <p class="text-center">Puntuación dada: {{prevRating}}</p>
+        <p class="text-center">Comentario: {{prevComment}}</p>
+        <div class="d-flex justify-content-center mt-4">
+            <button class="btn btn-info" (click)="returnHome()">Volver al perfil</button>
+        </div>
+    </div>
+</section>
+
