añadido path '' redirect to home

--- a/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
+++ b/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
@@ -20,7 +20,7 @@
     </section>
     
     <section class="col-md-5" id="teachers-nearby">
-      <h3>Profesores cerca de tí</h3>
+      <h3>Profesores cerca</h3>
         <div class="overflow-auto scrollable-container" *ngIf="!selectedTeacher">
           <div *ngFor="let teacher of teachers" (click)="selectTeacher(teacher)">
             <div class="row">
