--- a/src/app/pages/c404/c404.component.html
+++ b/src/app/pages/c404/c404.component.html
@@ -8,7 +8,7 @@
         <div class="col-12 col-md-6 p-4 align-middle">
             <h3 class="text-uppercase text-center">awww!....no me llores.</h3>
             <p class="text-center">Sólamente es una página de Error 404</p>
-            <p class="text-center">Revisa la url o contcte con el equipo técnico para más información</p>
+            <p class="text-center">Revisa la url o contacte con el equipo técnico para más información</p>
         </div>
     </section>
 </section>
