Home acabado a falta de extras y fondo con imágenes

--- a/src/app/modules/home/components/home/home-components/hero-section/hero-section.component.html
+++ b/src/app/modules/home/components/home/home-components/hero-section/hero-section.component.html
@@ -1,7 +1,16 @@
-<div>
+<!-- <div>
   <h1 class="fs-4 p-3">Qué quieres aprender?</h1>
   <div class="input-group mb-3 w-50">
     <input type="text" class="form-control" placeholder="Asignatura">
     <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+  </div>
+</div> -->
+
+<div class="px-4 py-5 my-5 text-center">
+  <h1 class="display-5 fw-bold mb-4">¿Qué quieres aprender?</h1>
+  <div class="col-lg-6 mx-auto">
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+      <button type="button" class="btn btn-light btn-lg px-4 gap-3" [routerLink]="['/teachers']">Buscar Profesores</button>
+    </div>
   </div>
 </div>
