--- a/src/app/modules/users/components/form-register/form-register.component.html
+++ b/src/app/modules/users/components/form-register/form-register.component.html
@@ -44,7 +44,9 @@
         </p>
       </div>-->
 
-      <app-form-register-location groupName="locationForm"></app-form-register-location>
+      <app-form-register-location
+        groupName="locationForm"
+      ></app-form-register-location>
 
       <div *ngIf="this.mainForm.value.role_id === '2'">
         <app-form-register-teacher
