--- a/src/app/modules/users/components/form-register-location/form-register-location.component.html
+++ b/src/app/modules/users/components/form-register-location/form-register-location.component.html
@@ -1,9 +1,16 @@
 <fieldset [formGroupName]="groupName">
   <div class="my-2">
-    <label for="location" class="form-label">Dirección</label>
-    <input class="form-control" id="location" #placesRef="ngx-places" ngx-gp-autocomplete (onAddressChange)="handleAddressChange($event)" placeholder="Busca tu dirección completa" formControlName="location" required/>
-    <!-- <p *ngIf="nameControl?.invalid">Tu mensaje de error</p> -->
+    <label for="address" class="form-label">Dirección</label>
+    <input
+      class="form-control"
+      id="address"
+      #placesRef="ngx-places"
+      ngx-gp-autocomplete
+      (onAddressChange)="handleAddressChange($event)"
+      placeholder="Busca tu dirección completa"
+      formControlName="address"
+      required
+    />
+    <!--<p *ngIf="nameControl?.invalid">Tu mensaje de error</p>-->
   </div>
 </fieldset>
-
-<!-- TODO los required que hay en el input, van aquí o ya en el formFroup del ts? -->
