--- a/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
+++ b/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col-6" *ngIf="teacher.rating">
       <img class="img-fluid"
-        src="https://t3.ftcdn.net/jpg/01/09/84/42/240_F_109844239_A7MdQSDf4y1H80cfvHZuSa0zKBkZ68S7.jpg" alt="RatingStar"
+        src="https://tmpfiles.nohat.cc/full-m2H7H7A0m2m2i8i8.png" alt="RatingStar"
         style="max-width: 55px" />
       <h3 class="text-black">{{ teacher.rating }}</h3>
     </div>
