Profile teacher OK y Profile student
Solo falta por terminar un punto del student
se han modificado una serie de componentes para adaptar colores y todo dependiendo de que usuario vea la página

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,7 @@
     /* Establece otros estilos, como color de texto, etc. */
     color: #fff;
 }
+
+.bg-color_teacher {
+    background-color: #f1f2f6;
+}
