--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
@@ -21,21 +21,23 @@
             </div>
         </div>
         <!-- Información -->
-        <div class="container">
+        <div class="container mb-4">
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <h4 class="text-secondary small mt-3"> Experiencia: {{teacher?.experience}} años.</h4>
-                        <h4 class="text-secondary small mt-3">Ubicación: {{teacher?.city}}.</h4>
+                        <h4 class="text-secondary small mt-3"> Experiencia: {{teacher?.experience}} años</h4>
+                        <h4 class="text-secondary small mt-3">Ubicación: {{teacher?.city}}</h4>
                         <h4 class="text-secondary small mt-3">Asignatura: {{teacher?.subject}} </h4>
                         <h4 class="text-secondary small mt-3">Precio: {{teacher?.price_hour}} €/hora </h4>
+                        <h4 *ngIf="user" class="text-secondary small mt-3">Teléfono: {{teacher?.phone}} </h4>
+                        <h4 *ngIf="user" class="text-secondary small mt-3">Email: {{teacher?.email}} </h4>
                     </div>
                 </div>
             </div>
-        </div>>
+        </div>
     </div>
     <!-- Informacion del teacher Bloque 2-->
-    <div class="col-lg-6 card-size">
+    <div class="col-lg-6 card-size mt-2">
         <div class="text-white">
             <div>
                 <h2>{{teacher?.name}}</h2>
@@ -73,79 +75,86 @@
     </div>
 </div>
 <!-- Ratings -->
-<div *ngIf="ratingBool">
-    <h2 class="text-center text-white mt-5 mb-4">Lo que dicen de {{ teacher?.name }} </h2>
-    <div class="container">
-        <div class="row">
-            <div class="col-8 mx-auto">
-                <div *ngFor="let ratings of ultimos4Ratings" class="mb-3">
-                    <div class="d-flex justify-content-start mb-2">
-                        <div class="card rounded-5 fondo-gris text-white p-3 col-sm-7">
-                            <div class="d-flex align-items-center">
-                                <div>
-                                    <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"
-                                        alt="RatingStar" style="max-width: 20px">
+<div *ngIf="user">
+    <div *ngIf="ratingBool">
+        <h2 class="text-center text-white mt-5 mb-4">Lo que dicen de {{ teacher?.name }} </h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-8 mx-auto">
+                    <div *ngFor="let ratings of ultimos4Ratings" class="mb-3">
+                        <div class="d-flex justify-content-start mb-2">
+                            <div class="card rounded-5 fondo-gris text-white p-3 col-sm-7">
+                                <div class="d-flex align-items-center">
+                                    <div>
+                                        <img class="img-fluid"
+                                            src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"
+                                            alt="RatingStar" style="max-width: 20px">
+                                    </div>
+                                    <div>
+                                        <h3 class="mt-3 text-white ms-3 fs-5 ">{{ ratings?.rating }}</h3>
+                                    </div>
                                 </div>
-                                <div>
-                                    <h3 class="mt-3 text-white ms-3 fs-5 ">{{ ratings?.rating }}</h3>
-                                </div>
+                                <p>{{ ratings?.comment_student }}</p>
+                                <small>{{ ratings?.creation_date | date:'dd/MM/yyyy' }}</small>
                             </div>
-                            <p>{{ ratings?.comment_student }}</p>
-                            <small>{{ ratings?.creation_date | date:'dd/MM/yyyy' }}</small>
                         </div>
-                    </div>
-                    <div class="d-flex justify-content-end mb-2 ">
-                        <div class="card text-end text-white rounded-5 fondo-gris p-3 col-sm-7">
-                            <p>{{ ratings?.comment_teacher }}</p>
-                            <small>{{ ratings?.creation_date | date:'dd/MM/yyyy' }}</small>
+                        <div class="d-flex justify-content-end mb-2 ">
+                            <div class="card text-end text-white rounded-5 fondo-gris p-3 col-sm-7">
+                                <p>{{ ratings?.comment_teacher }}</p>
+                                <small>{{ ratings?.creation_date | date:'dd/MM/yyyy' }}</small>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div *ngIf="!ratingBool">
-    <h2 class="text-center text-white mt-5 mb-5">Aún no hay valoraciones para {{ teacher?.name }}</h2>
+    <div *ngIf="!ratingBool">
+        <h2 class="text-center text-white mt-5 mb-5">Aún no hay valoraciones para {{ teacher?.name }}</h2>
+    </div>
 </div>
 <!-- Clases disponibles -->
-<div>
-    <h2 class="text-center text-white mt-3 mb-4">Clases Disponibles </h2>
-</div>
-<div class="container mt-3 mb-3">
-    <div class="row justify-content-center">
-        <div class="col-sm-8 bg-white rounded-4">
-            <table class="table table-striped text-black text-center">
-                <tr>
-                    <th>Día de la semana</th>
-                    <th>Hora de inicio</th>
-                    <th>Hora de fin</th>
-                    <th>Bloque</th>
-                    <th>Acción</th>
-                </tr>
-                <tr class="border-1 border-black bg-color_table mt-2" *ngFor="let slot of studentClass; let i = index">
-                    <td>{{ slot?.day_of_week }}</td>
-                    <td>{{ slot?.start_time }}</td>
-                    <td>{{ slot?.end_time }}</td>
-                    <td>{{ slot?.slot }}</td>
-                    <td>
-                        <ng-container *ngIf="enrolStudent[i]">
-                            <button class="m-1 btn btn-info btn-sm" [ngClass]="{'btn-warning': hoverable[i]}"
-                                (mouseenter)="toggleHover(i)" (mouseleave)="toggleHover(i)"
-                                (click)="unenrollClass(slot)">
-                                <ng-container *ngIf="!hoverable[i]">Inscrito</ng-container>
-                                <ng-container *ngIf="hoverable[i]">Dar de baja</ng-container>
-                            </button>
-                        </ng-container>
-                        <ng-container *ngIf="!enrolStudent[i] && isSlotNotFull[i]">
-                            <button class="m-1 btn btn-success btn-sm" (click)="enrollClass(slot)">Inscribirse</button>
-                        </ng-container>
-                        <ng-container *ngIf="!enrolStudent[i] && !isSlotNotFull[i]">
-                            <button class="m-1 btn btn-danger btn-sm" disabled>Completo</button>
-                        </ng-container>
-                    </td>
-                </tr>
-            </table>
+<div *ngIf="user">
+    <div>
+        <h2 class="text-center text-white mt-3 mb-4">Clases Disponibles </h2>
+    </div>
+    <div class="container mt-3 mb-3">
+        <div class="row justify-content-center">
+            <div class="col-sm-8 bg-white rounded-4">
+                <table class="table table-striped text-black text-center">
+                    <tr>
+                        <th>Día de la semana</th>
+                        <th>Hora de inicio</th>
+                        <th>Hora de fin</th>
+                        <th>Bloque</th>
+                        <th>Acción</th>
+                    </tr>
+                    <tr class="border-1 border-black bg-color_table mt-2"
+                        *ngFor="let slot of studentClass; let i = index">
+                        <td>{{ slot?.day_of_week }}</td>
+                        <td>{{ slot?.start_time }}</td>
+                        <td>{{ slot?.end_time }}</td>
+                        <td>{{ slot?.slot }}</td>
+                        <td>
+                            <ng-container *ngIf="enrolStudent[i]">
+                                <button class="m-1 btn btn-info btn-sm" [ngClass]="{'btn-warning': hoverable[i]}"
+                                    (mouseenter)="toggleHover(i)" (mouseleave)="toggleHover(i)"
+                                    (click)="unenrollClass(slot)">
+                                    <ng-container *ngIf="!hoverable[i]">Inscrito</ng-container>
+                                    <ng-container *ngIf="hoverable[i]">Dar de baja</ng-container>
+                                </button>
+                            </ng-container>
+                            <ng-container *ngIf="!enrolStudent[i] && isSlotNotFull[i]">
+                                <button class="m-1 btn btn-success btn-sm"
+                                    (click)="enrollClass(slot)">Inscribirse</button>
+                            </ng-container>
+                            <ng-container *ngIf="!enrolStudent[i] && !isSlotNotFull[i]">
+                                <button class="m-1 btn btn-danger btn-sm" disabled>Completo</button>
+                            </ng-container>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </div>
