--- a/src/app/modules/users/components/form-register-subjects/form-register-subjects.component.html
+++ b/src/app/modules/users/components/form-register-subjects/form-register-subjects.component.html
@@ -6,7 +6,10 @@
       id="department_id"
       formControlName="department_id"
     >
-      <option *ngFor="let department of departments" [value]="department.id">
+      <option
+        *ngFor="let department of departments; trackBy: trackByDepartmentId"
+        [value]="department.id"
+      >
         {{ department.department_name }}
       </option>
     </select>
@@ -20,5 +23,11 @@
       placeholder="Ingresa el nombre de la asignatura"
       formControlName="subject"
     />
+    <p class="error" *ngIf="checkControl('subject', 'required')">
+      Campo es requerido
+    </p>
+    <p class="error" *ngIf="checkControl('subject', 'minlength')">
+      La longitud minima es de 3 caracteres
+    </p>
   </div>
 </fieldset>
