--- a/src/app/modules/users/components/form-register-user/form-register-user.component.html
+++ b/src/app/modules/users/components/form-register-user/form-register-user.component.html
@@ -9,7 +9,12 @@
       formControlName="name"
       required
     />
-    <p *ngIf="nameControl">*Campo requerido</p>
+    <p class="error" *ngIf="checkControl('name', 'required')">
+      Campo es requerido
+    </p>
+    <p class="error" *ngIf="checkControl('name', 'minlength')">
+      La longitud minima es de 3 caracteres
+    </p>
   </div>
   <div class="my-2">
     <label for="nickname" class="form-label">Nombre de usario</label>
@@ -21,6 +26,12 @@
       formControlName="nickname"
       required
     />
+    <p class="error" *ngIf="checkControl('nickname', 'required')">
+      Campo es requerido
+    </p>
+    <p class="error" *ngIf="checkControl('nickname', 'minlength')">
+      La longitud minima es de 3 caracteres
+    </p>
   </div>
   <div class="my-2">
     <label for="email" class="form-label">Correo electrònico</label>
@@ -32,17 +43,26 @@
       formControlName="email"
       required
     />
+    <p class="error" *ngIf="checkControl('email', 'required')">
+      Campo es requerido
+    </p>
+    <p class="error" *ngIf="checkControl('email', 'email')">
+      Email no es correcto
+    </p>
   </div>
   <div class="my-2">
-    <label for="phone" class="form-label">Telèfono</label>
+    <label for="phone" class="form-label">Teléfono</label>
     <input
       class="form-control"
       type="text"
       id="phone"
-      placeholder="ingresa tu numero de telèfono"
+      placeholder="ingresa tu numero de teléfono"
       formControlName="phone"
       required
     />
+    <p class="error" *ngIf="checkControl('phone', 'required')">
+      Campo es requerido
+    </p>
   </div>
   <div class="my-2">
     <label for="date_of_birth" class="form-label">Fecha de nacimiento</label>
@@ -54,6 +74,9 @@
       formControlName="date_of_birth"
       required
     />
+    <p class="error" *ngIf="checkControl('date_of_birth', 'required')">
+      Campo es requerido
+    </p>
   </div>
   <div class="my-2">
     <label for="password" class="form-label">Contraseña</label>
@@ -64,9 +87,12 @@
       formControlName="password"
       required
     />
+    <p class="error" *ngIf="checkControl('password', 'required')">
+      Campo es requerido
+    </p>
   </div>
   <div class="my-2">
-    <label for="photo" class="form-label">Imàgen de perfil</label>
+    <label for="photo" class="form-label">Imágen de perfil</label>
     <input
       class="form-control"
       type="text"
@@ -75,5 +101,8 @@
       formControlName="photo"
       required
     />
+    <p class="error" *ngIf="checkControl('photo', 'required')">
+      Campo es requerido
+    </p>
   </div>
 </fieldset>
