--- a/src/app/modules/users/components/form-register/form-register.component.html
+++ b/src/app/modules/users/components/form-register/form-register.component.html
@@ -58,7 +58,12 @@
       </div>
 
       <!--[disabled]="!mainForm.valid"-->
-      <input type="submit" value="Enviar" class="btn btn-danger mt-3" />
+      <input
+        type="submit"
+        value="Enviar"
+        class="btn btn-danger mt-3"
+        [disabled]="!mainForm.valid"
+      />
     </form>
   </section>
 </div>
